actualizacion de ws

--- a/confianza-ws-rest/src/main/resources/application-dev.properties
+++ b/confianza-ws-rest/src/main/resources/application-dev.properties
@@ -8,10 +8,9 @@
 #oracle.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 oracle.datasource.jdbc-url:jdbc:oracle:thin:@172.18.23.195:1521/SEGCONFI
-oracle.datasource.username:bdg
-oracle.datasource.password:bdg_confianza
+oracle.datasource.username:BDG_EXTRANET
+oracle.datasource.password:BDG_EXTRANET
 oracle.datasource.driver-class-name=oracle.jdbc.OracleDriver
-
 
 ###DB H2
 oauth.datasource.jdbc-url:jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
